--- a/Nginx/01. Beginner's Guide.md
+++ b/Nginx/01. Beginner's Guide.md
@@ -86,3 +86,27 @@ http {
 
 > 访问"http://172.25.63.38/"，**nginx**将转发至"https://www.baidu.com/"  
 > url以".html"结尾，将到/data目录下寻找资源
+
+```
+user www-data;
+worker_processes auto;
+pid /run/nginx.pid;
+include /etc/nginx/modules-enabled/*.conf;
+
+events {
+    worker_connections 768;
+    # multi_accept on;
+}
+http {
+    server {
+        location / {
+            sub_filter 'nginx' 'love-365';
+            sub_filter_once off;
+        }
+        location ~\.html$ {
+            root /data;
+        }
+    }
+}
+```
+> 透过sub_filter，将"nginx"替换成"love-365"
