--- a/TradingSystem/03. Source/02. Tools.md
+++ b/TradingSystem/03. Source/02. Tools.md
@@ -1,3 +1,5 @@
 # 配套工具
 1. [spdlog | Very fast, header-only/compiled, C++ logging library](https://github.com/gabime/spdlog)
-2. [grafanan | 查询、可视化、警报观测平台](https://grafana.com/)
+2. [nlohmann | JSON for Modern C++](https://github.com/nlohmann/json)
+3. [glaze | Extremely fast, in memory, JSON and interface library for modern C++](https://github.com/stephenberry/glaze)
+4. [grafanan | 查询、可视化、警报观测平台](https://grafana.com/)
