[add] bridge between C++ and Python

--- a/TradingSystem/03. Source/02. Tools.md
+++ b/TradingSystem/03. Source/02. Tools.md
@@ -3,3 +3,5 @@
 2. [nlohmann | JSON for Modern C++](https://github.com/nlohmann/json)
 3. [glaze | Extremely fast, in memory, JSON and interface library for modern C++](https://github.com/stephenberry/glaze)
 4. [grafanan | 查询、可视化、警报观测平台](https://grafana.com/)
+5. [pybind11 | Seamless operability between C++11 and Python](https://pybind11.readthedocs.io/en/stable/)
+6. [Boost.Python](https://www.boost.org/doc/libs/1_58_0/libs/python/doc/)
